Finished connecting to API

--- a/Sunshine/app/build.gradle
+++ b/Sunshine/app/build.gradle
@@ -11,11 +11,9 @@ android {
         versionCode 1
         versionName "1.0"
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+
+    buildTypes.each {
+        it.buildConfigField 'String', 'OPEN_WEATHER_MAP_API_KEY', "\"0e0f6eb6ce0a7fe832881cdf733a38a2\""
     }
 }
 
