--- a/Sunshine/gradle.properties
+++ b/Sunshine/gradle.properties
@@ -16,3 +16,4 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
+MyOpenWeatherMapApiKey="0e0f6eb6ce0a7fe832881cdf733a38a2"
